@@ -1,5 +1,12 @@
 2012-02-01  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[v int] Add abstractions: -fs, fs, fso
+
+	* types-table.scm (-fs, fs, fso): New procs.
+	(handle-exception-proc, sel/check, test-m3 check-1): Use ‘fs’.
+
+2012-02-01  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[v] Explicitly use UTF-8 for test database encoding.
 
 	* testing.scm (d/c): For action "create", specify encoding ‘UTF8’.
